# soloud

./: .gitmodules  CMakeLists.txt
include/: soloud.h  soloud_core.h
src/audiosource/speech/: klatt.cpp
src/backend/portaudio/: soloud_portaudio.cpp
src/core/: soloud.cpp  soloud_bus.cpp
tests/: SoLoudTest.cpp
